# eos-knowledge-services-multiplexer

./: Makefile.am  build-flatpak.sh  com.endlessm.BaseEknServicesMultiplexer.json.in  com.endlessm.BaseEknServicesMultiplexer.json.in.in  com.endlessm.BaseEknServicesMultiplexer.metainfo.xml  com.endlessm.BaseEknServicesMultiplexer.metainfo.xml.in  com.endlessm.EknServicesMultiplexer.json.in  com.endlessm.EknServicesMultiplexer.json.in.in  com.endlessm.EknServicesMultiplexer.metainfo.xml.in  configure.ac  generate-manifests
data/: com.endlessm.EknServices.SearchProviderV1.service.in  com.endlessm.EknServices2.SearchProviderV2.service.in  com.endlessm.EknServices3.SearchProviderV3.service.in  com.endlessm.EknServices4.SearchProviderV4.service.in
docs/: Architecture.md  Debugging.md
multi-services/: eks-multi-search-provider-dispatcher.c
